<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Settings.EditprofileFragment">


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/hiding_frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/back_press"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center_vertical"
                android:text="@string/complete_your_profile"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/back_press"
                app:layout_constraintStart_toEndOf="@+id/back_press"
                app:layout_constraintTop_toTopOf="@+id/back_press"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/change_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="10dp"
                android:text="@string/change_photo"
                android:textColor="@color/maintheme"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/profile_image"
                app:layout_constraintStart_toStartOf="@+id/profile_image"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/profile_editor_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name*"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/phone_number_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Phone Number*"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/add_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="-4dp"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:padding="10dp"
                        android:text="Add"
                        android:textColor="@color/maintheme"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/email_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Email*"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/birthday_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Birthday*"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthdayedittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="dd/MM/yyyy"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/gender_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Birthday*"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:entries="@array/gender_array"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/black" />


                <Button
                    android:id="@+id/update"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/bg2"
                    android:enabled="false"
                    android:text="@string/continuelocal"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="@+id/email2"
                    app:layout_constraintHorizontal_bias="0.769"
                    app:layout_constraintStart_toStartOf="@+id/email"
                    app:layout_constraintTop_toBottomOf="@+id/password" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>